--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Implementation of the quality assurance projects for freecodecamp",
   "main": "./src/server/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "testserver": "mocha --compilers js:babel-core/register --require babel-polyfill \"./src/server/__tests__/**/*.js\" --exit --timeout 30000",
+    "devserver": "nodemon ./src/server/server.js --exec babel-node",
+    "format": "prettier --write \"src/**/*.{js,jsx}\""
   },
   "repository": {
     "type": "git",
@@ -40,6 +43,8 @@
     "babel-preset-react": "^6.24.1",
     "body-parser": "^1.18.3",
     "clean-webpack-plugin": "^0.1.19",
+    "compression": "^1.7.3",
+    "cors": "^2.8.4",
     "css-loader": "^1.0.0",
     "eslint": "^5.2.0",
     "eslint-config-airbnb": "^17.0.0",
@@ -49,10 +54,12 @@
     "eslint-plugin-prettier": "^2.6.2",
     "eslint-plugin-react": "^7.10.0",
     "express": "^4.16.3",
+    "express-validator": "^5.3.0",
     "file-loader": "^1.1.11",
     "helmet": "^3.13.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
+    "memory-cache": "^0.2.0",
     "mini-css-extract-plugin": "^0.4.1",
     "mongodb": "^3.1.1",
     "mongoose": "^5.2.6",
@@ -74,6 +81,7 @@
     "babel-jest": "^23.4.2",
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
+    "dotenv": "^6.0.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "enzyme-to-json": "^3.3.4",
