docs(package changes to the project): added some packages to the project and removed webpack
removed all of webpack dependencies and added storybook,parcel and comitizen to the project

--- a/.babelrc
+++ b/.babelrc
@@ -3,5 +3,7 @@
     "plugins": [
       "transform-class-properties",
       "transform-react-constant-elements"
-    ]
+    ],
+    "sourceMap": "inline",
+    "retainLines": true
   }
