--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "testserver": "mocha --compilers js:babel-core/register --require babel-polyfill \"./src/server/__tests__/**/*.js\" --exit --timeout 30000",
     "devserver": "nodemon ./src/server/server.js --exec babel-node",
-    "format": "prettier --write \"src/**/*.{js,jsx}\""
+    "format": "prettier --write \"src/**/*.{js,jsx}\"",
+    "lint": "eslint **/*.{js,jsx} --quiet",
+    "commit":"git-cz",
+    "storybook": "start-storybook -p 9001 -c .storybook"
   },
   "repository": {
     "type": "git",
@@ -42,10 +45,8 @@
     "babel-preset-minify": "^0.4.3",
     "babel-preset-react": "^6.24.1",
     "body-parser": "^1.18.3",
-    "clean-webpack-plugin": "^0.1.19",
     "compression": "^1.7.3",
     "cors": "^2.8.4",
-    "css-loader": "^1.0.0",
     "eslint": "^5.2.0",
     "eslint-config-airbnb": "^17.0.0",
     "eslint-config-prettier": "^2.9.0",
@@ -55,32 +56,26 @@
     "eslint-plugin-react": "^7.10.0",
     "express": "^4.16.3",
     "express-validator": "^5.3.0",
-    "file-loader": "^1.1.11",
     "helmet": "^3.13.0",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
     "memory-cache": "^0.2.0",
-    "mini-css-extract-plugin": "^0.4.1",
     "mongodb": "^3.1.1",
     "mongoose": "^5.2.6",
     "node-sass": "^4.9.2",
+    "parcel-bundler": "^1.9.7",
     "postcss-loader": "^2.1.6",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1",
-    "sass-loader": "^7.1.0",
-    "uglifyjs-webpack-plugin": "^1.2.7",
-    "url-loader": "^1.0.1",
-    "webpack": "^4.16.4",
-    "webpack-cli": "^3.1.0",
-    "webpack-merge": "^4.1.4",
     "winston": "^3.0.0"
   },
   "devDependencies": {
+    "@storybook/react": "^3.4.10",
     "babel-jest": "^23.4.2",
     "chai": "^4.1.2",
     "chai-http": "^4.0.0",
+    "commitizen": "^2.10.1",
+    "cz-conventional-changelog": "^2.1.0",
     "dotenv": "^6.0.0",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
@@ -100,5 +95,10 @@
     "setupFiles": [
       "<rootDir>/enzymeconfig.js"
     ]
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
