--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,7 @@
 {
     "presets": ["env", "react"],
     "plugins": [
+      "transform-object-rest-spread",
       "transform-class-properties",
       "transform-react-constant-elements"
     ],
