docs(added package to allow dynamic imports and changed babel config file): added dynamic imports pa
added package to allow code splitting based on routes and activated the feature on babel config file
in order for parcel to generate the bundles based on it and a procfile for  heroku

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "./src/server/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "testconverter": "cross-env NODE_ENV=test mocha --compilers js:babel-core/register --require babel-polyfill \"./src/server/__tests__/metricconvert.test\" --exit --timeout 30000",
     "testissueprojects": "cross-env NODE_ENV=test mocha --compilers js:babel-core/register --require babel-polyfill \"./src/server/__tests__/issuesproject.test\" --exit --timeout 30000",
     "testissues": "cross-env NODE_ENV=test mocha --compilers js:babel-core/register --require babel-polyfill \"./src/server/__tests__/issues.test.js\" --exit --timeout 30000",
     "testlibrary": "cross-env NODE_ENV=test mocha --compilers js:babel-core/register --require babel-polyfill \"./src/server/__tests__/library.test.js\" --exit --timeout 30000",
@@ -19,12 +20,12 @@
     "commit": "git-cz",
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "buildserver":"npx babel ./src/server/server.js -o ./lib/server.bundle.js --presets minify",
-    "buildlogger":"npx babel ./src/server/logger.js -o ./lib/logger.js --presets minify",
-    "buildmodels":"npx babel ./src/server/models/ --out-dir ./lib --presets minify",
-    "buildcontrollers":"npx babel ./src/server/controllers/ --out-dir ./lib --presets minify",
-    "buildserverdeps":"npm run buildserver && npm run buildlogger && npm run buildmodels && npm run buildcontrollers",
-    "buildclient":"parcel build index.html --public-url ./",
+    "buildserver": "npx babel ./src/server/server.js -o ./lib/server.bundle.js --presets minify",
+    "buildlogger": "npx babel ./src/server/logger.js -o ./lib/logger.js --presets minify",
+    "buildmodels": "npx babel ./src/server/models/ --out-dir ./lib --presets minify",
+    "buildcontrollers": "npx babel ./src/server/controllers/ --out-dir ./lib --presets minify",
+    "buildserverdeps": "npm run buildserver && npm run buildlogger && npm run buildmodels && npm run buildcontrollers",
+    "buildclient": "parcel build index.html --public-url ./",
     "postinstall": "npm run buildserverdeps && npm run buildclient",
     "start": "node ./lib/server.bundle.js"
   },
@@ -56,6 +57,7 @@
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.6",
     "babel-loader": "^7.1.5",
+    "babel-plugin-dynamic-import-node": "^2.1.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-constant-elements": "^6.23.0",
