docs(babel package.json and readme.md): install and config of dynamic imports and addition of links
installed and configured dynamic imports and classnames for code splitting and linked the path to
the urls on the  readme

--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,7 @@
     "plugins": [
       "transform-object-rest-spread",
       "transform-class-properties",
-      "dynamic-import-node",
+      "syntax-dynamic-import",
       "transform-react-constant-elements"
     ]
   }
