--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     "babel-core": "^6.26.3",
     "babel-eslint": "^8.2.6",
     "babel-loader": "^7.1.5",
-    "babel-plugin-dynamic-import-node": "^2.1.0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-react-constant-elements": "^6.23.0",
@@ -66,6 +66,7 @@
     "babel-preset-minify": "^0.4.3",
     "babel-preset-react": "^6.24.1",
     "body-parser": "^1.18.3",
+    "classnames": "^2.2.6",
     "compression": "^1.7.3",
     "cors": "^2.8.4",
     "eslint": "^5.2.0",
