refactor(stocks): stock search server implementation
corrected the server implementation of the stock search project

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "testissueprojects": "cross-env NODE_ENV=test mocha --compilers js:babel-core/register --require babel-polyfill \"./src/server/__tests__/issuesproject.test\" --exit --timeout 30000",
     "testissues": "cross-env NODE_ENV=test mocha --compilers js:babel-core/register --require babel-polyfill \"./src/server/__tests__/issues.test.js\" --exit --timeout 30000",
     "testlibrary": "cross-env NODE_ENV=test mocha --compilers js:babel-core/register --require babel-polyfill \"./src/server/__tests__/library.test.js\" --exit --timeout 30000",
+    "teststock": "cross-env NODE_ENV=test mocha --compilers js:babel-core/register --require babel-polyfill \"./src/server/__tests__/stocksearch.test.js\" --exit --timeout 30000",
     "testmessageboard": "cross-env NODE_ENV=test mocha --compilers js:babel-core/register --require babel-polyfill \"./src/server/__tests__/messageboards.test.js\" --exit --timeout 30000",
     "testmessageboardthreads": "cross-env NODE_ENV=test mocha --compilers js:babel-core/register --require babel-polyfill \"./src/server/__tests__/messageboardsthreads.test.js\" --exit --timeout 30000",
     "testmessageboardreplies": "cross-env NODE_ENV=test mocha --compilers js:babel-core/register --require babel-polyfill \"./src/server/__tests__/messageboardsthreadsreplies.test.js\" --exit --timeout 30000",
@@ -16,7 +17,7 @@
     "devserver": "nodemon ./src/server/server.js --exec babel-node",
     "devclient": "parcel ./src/client/index.html",
     "format": "prettier --write \"src/**/*.{js,jsx}\"",
-    "lint": "eslint **/*.{js,jsx} --quiet",
+    "lint": "eslint **/*.{js,jsx} --quiet -o linterrors.txt --ignore-path .gitignore",
     "commit": "git-cz",
     "storybook": "cross-env NODE_ENV=stories start-storybook -p 6006",
     "build-storybook": "build-storybook",
