implementation of the challenge issue tracker

--- a/package.json
+++ b/package.json
@@ -16,18 +16,19 @@
     "testserver": "mocha --compilers js:babel-core/register --require babel-polyfill \"./src/server/__tests__/**/*.js\" --exit --timeout 30000",
     "devserver": "nodemon ./src/server/server.js --exec babel-node",
     "devclient": "parcel ./src/client/index.html",
+    "devmode":"concurrently \"nodemon ./src/server/server.js --exec babel-node\" \"parcel ./src/client/index.html\" ",
     "format": "prettier --write \"src/**/*.{js,jsx}\"",
     "lint": "eslint **/*.{js,jsx} --quiet -o linterrors.txt --ignore-path .gitignore",
-    "commit": "git-cz",
+    "repocommit": "npx git-cz",
     "storybook": "cross-env NODE_ENV=stories start-storybook -p 6006",
     "build-storybook": "build-storybook",
     "buildserver": "npx babel ./src/server/server.js -o ./lib/server.bundle.js --presets minify",
     "buildlogger": "npx babel ./src/server/logger.js -o ./lib/logger.js --presets minify",
     "buildmodels": "npx babel ./src/server/models/ --out-dir ./lib --presets minify",
     "buildcontrollers": "npx babel ./src/server/controllers/ --out-dir ./lib --presets minify",
-    "buildserverdeps": "npm run buildserver && npm run buildlogger && npm run buildmodels && npm run buildcontrollers",
+    "buildserverdeps":"concurrently \"npm:buildserver\" \"npm:buildlogger\" \"npm:buildmodels\" \"npm:buildcontrollers\"",
     "buildclient": "parcel build ./src/client/index.html --public-url ./",
-    "postinstall": "npm run buildserverdeps && npm run buildclient",
+    "postinstall": "concurrently \"npm:buildserverdeps\" \"npm:buildclient\"",
     "start": "node ./lib/server.bundle.js"
   },
   "repository": {
@@ -69,6 +70,7 @@
     "body-parser": "^1.18.3",
     "classnames": "^2.2.6",
     "compression": "^1.7.3",
+    "concurrently": "^4.1.0",
     "cors": "^2.8.4",
     "eslint": "^5.2.0",
     "eslint-config-airbnb": "^17.0.0",
