feat(server controllers log): bumped versions of packages and adjusted babel to reflect it and serve
versions of the packages were bumped to latest, corrected some bugs lingering and updated the
controllers

--- a/package.json
+++ b/package.json
@@ -5,31 +5,32 @@
   "main": "./src/server/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "testconverter": "cross-env NODE_ENV=test mocha --compilers js:babel-core/register --require babel-polyfill \"./src/server/__tests__/metricconvert.test\" --exit --timeout 30000",
-    "testissueprojects": "cross-env NODE_ENV=test mocha --compilers js:babel-core/register --require babel-polyfill \"./src/server/__tests__/issuesproject.test\" --exit --timeout 30000",
-    "testissues": "cross-env NODE_ENV=test mocha --compilers js:babel-core/register --require babel-polyfill \"./src/server/__tests__/issues.test.js\" --exit --timeout 30000",
-    "testlibrary": "cross-env NODE_ENV=test mocha --compilers js:babel-core/register --require babel-polyfill \"./src/server/__tests__/library.test.js\" --exit --timeout 30000",
-    "teststock": "cross-env NODE_ENV=test mocha --compilers js:babel-core/register --require babel-polyfill \"./src/server/__tests__/stocksearch.test.js\" --exit --timeout 30000",
-    "testmessageboard": "cross-env NODE_ENV=test mocha --compilers js:babel-core/register --require babel-polyfill \"./src/server/__tests__/messageboards.test.js\" --exit --timeout 30000",
-    "testmessageboardthreads": "cross-env NODE_ENV=test mocha --compilers js:babel-core/register --require babel-polyfill \"./src/server/__tests__/messageboardsthreads.test.js\" --exit --timeout 30000",
-    "testmessageboardreplies": "cross-env NODE_ENV=test mocha --compilers js:babel-core/register --require babel-polyfill \"./src/server/__tests__/messageboardsthreadsreplies.test.js\" --exit --timeout 30000",
-    "testserver": "mocha --compilers js:babel-core/register --require babel-polyfill \"./src/server/__tests__/**/*.js\" --exit --timeout 30000",
-    "devserver": "nodemon ./src/server/server.js --exec babel-node",
+    "testconverter": "cross-env NODE_ENV=test mocha  --require @babel/register  \"./src/server/__tests__/metricconvert.test\" --exit --timeout 30000",
+    "testissueprojects": "cross-env NODE_ENV=test mocha  --require @babel/register \"./src/server/__tests__/issuesproject.test\" --exit --timeout 30000",
+    "testissues": "cross-env NODE_ENV=test mocha  --require @babel/register \"./src/server/__tests__/issues.test.js\" --exit --timeout 30000",
+    "testlibrary": "cross-env NODE_ENV=test mocha  --require @babel/register \"./src/server/__tests__/library.test.js\" --exit --timeout 30000",
+    "teststock": "cross-env NODE_ENV=test mocha  --require @babel/register \"./src/server/__tests__/stocksearch.test.js\" --exit --timeout 30000",
+    "testmessageboard": "cross-env NODE_ENV=test mocha  --require @babel/register \"./src/server/__tests__/messageboards.test.js\" --exit --timeout 30000",
+    "testmessageboardthreads": "cross-env NODE_ENV=test mocha  --require @babel/register  \"./src/server/__tests__/messageboardsthreads.test.js\" --exit --timeout 30000",
+    "testmessageboardreplies": "cross-env NODE_ENV=test mocha  --require @babel/register  \"./src/server/__tests__/messageboardsthreadsreplies.test.js\" --exit --timeout 30000",
+    "testserver": "cross-env NODE_ENV=test mocha  --require @babel/register \"./src/server/__tests__/**/*.js\" --exit --timeout 30000",
+    "devserver": "nodemon --exec babel-node ./src/server/server.js",
     "devclient": "parcel ./src/client/index.html",
-    "devmode":"concurrently \"nodemon ./src/server/server.js --exec babel-node\" \"parcel ./src/client/index.html\" ",
+    "devmode": "concurrently \"nodemon ./src/server/server.js --exec babel-node\" \"parcel ./src/client/index.html\" ",
     "format": "prettier --write \"src/**/*.{js,jsx}\"",
     "lint": "eslint **/*.{js,jsx} --quiet -o linterrors.txt --ignore-path .gitignore",
     "repocommit": "npx git-cz",
-    "storybook": "cross-env NODE_ENV=stories start-storybook -p 6006",
-    "build-storybook": "build-storybook",
     "buildserver": "npx babel ./src/server/server.js -o ./lib/server.bundle.js --presets minify",
     "buildlogger": "npx babel ./src/server/logger.js -o ./lib/logger.js --presets minify",
     "buildmodels": "npx babel ./src/server/models/ --out-dir ./lib --presets minify",
     "buildcontrollers": "npx babel ./src/server/controllers/ --out-dir ./lib --presets minify",
-    "buildserverdeps":"concurrently \"npm:buildserver\" \"npm:buildlogger\" \"npm:buildmodels\" \"npm:buildcontrollers\"",
+    "buildserverdeps": "concurrently \"npm:buildserver\" \"npm:buildlogger\" \"npm:buildmodels\" \"npm:buildcontrollers\"",
     "buildclient": "parcel build ./src/client/index.html --public-url ./",
     "postinstall": "npm run buildserverdeps && npm run buildclient",
-    "start": "node ./lib/server.bundle.js"
+    "start": "node ./lib/server.bundle.js",
+    "clean": "rimraf .cache dist/*",
+    "storybook": "cross-env NODE_ENV=stories start-storybook -p 6006",
+    "storybook-build": "build-storybook"
   },
   "repository": {
     "type": "git",
@@ -52,80 +53,83 @@
   },
   "homepage": "https://github.com/jonniebigodes/fcc-isqa#readme",
   "dependencies": {
-    "@material-ui/core": "^3.0.2",
-    "@material-ui/icons": "^3.0.1",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.3.4",
+    "@babel/node": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.3.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.3.4",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/plugin-transform-react-constant-elements": "^7.2.0",
+    "@babel/polyfill": "^7.2.5",
+    "@babel/preset-env": "^7.3.4",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.0.0",
+    "@material-ui/core": "^3.9.2",
+    "@material-ui/icons": "^3.0.2",
     "axios": "^0.18.0",
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^8.2.6",
-    "babel-loader": "^7.1.5",
-    "babel-plugin-syntax-dynamic-import": "^6.18.0",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-plugin-transform-react-constant-elements": "^6.23.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-minify": "^0.4.3",
-    "babel-preset-react": "^6.24.1",
+    "babel-eslint": "^10.0.1",
+    "babel-preset-minify": "^0.5.0",
     "body-parser": "^1.18.3",
     "classnames": "^2.2.6",
     "compression": "^1.7.3",
     "concurrently": "^4.1.0",
-    "cors": "^2.8.4",
-    "eslint": "^5.2.0",
-    "eslint-config-airbnb": "^17.0.0",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-import": "^2.13.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-prettier": "^2.6.2",
-    "eslint-plugin-react": "^7.10.0",
-    "express": "^4.16.3",
-    "express-validator": "^5.3.0",
-    "helmet": "^3.13.0",
+    "cors": "^2.8.5",
+    "eslint": "^5.15.1",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^4.1.0",
+    "eslint-plugin-import": "^2.16.0",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.4",
+    "express": "^4.16.4",
+    "express-validator": "^5.3.1",
+    "helmet": "^3.15.1",
     "memory-cache": "^0.2.0",
-    "mongodb": "^3.1.1",
-    "mongoose": "^5.2.6",
-    "node-sass": "^4.9.2",
-    "parcel-bundler": "^1.9.7",
-    "postcss-loader": "^2.1.6",
-    "prop-types": "^15.6.2",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
+    "mongodb": "^3.1.13",
+    "mongoose": "^5.4.18",
+    "node-sass": "^4.11.0",
+    "parcel-bundler": "^1.12.0",
+    "postcss-loader": "^3.0.0",
+    "prop-types": "^15.7.2",
+    "react": "^16.8.4",
+    "react-dom": "^16.8.4",
     "react-helmet": "^5.2.0",
     "react-loadable": "^5.5.0",
     "react-router-dom": "^4.3.1",
     "uuid": "^3.3.2",
-    "winston": "^3.0.0"
+    "winston": "^3.2.1"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^3.4.10",
-    "@storybook/addon-knobs": "^3.4.10",
-    "@storybook/addon-links": "^3.4.10",
-    "@storybook/addons": "^3.4.10",
-    "@storybook/react": "^3.4.10",
-    "babel-jest": "^23.4.2",
+    "@storybook/addon-actions": "^5.0.1",
+    "@storybook/addon-knobs": "^5.0.1",
+    "@storybook/addon-links": "^5.0.1",
+    "@storybook/addons": "^5.0.1",
+    "@storybook/react": "^5.0.1",
+    "babel-jest": "^24.3.1",
     "babel-runtime": "^6.26.0",
-    "chai": "^4.1.2",
-    "chai-http": "^4.0.0",
-    "commitizen": "^2.10.1",
+    "chai": "^4.2.0",
+    "chai-http": "^4.2.1",
+    "commitizen": "^3.0.7",
     "cross-env": "^5.2.0",
     "cz-conventional-changelog": "^2.1.0",
-    "dotenv": "^6.0.0",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "enzyme-to-json": "^3.3.4",
+    "dotenv": "^6.2.0",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.10.0",
+    "enzyme-to-json": "^3.3.5",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^23.4.2",
-    "mocha": "^5.2.0",
-    "nodemon": "^1.18.3",
-    "prettier": "^1.14.0",
-    "react-test-renderer": "^16.4.2",
-    "storybook-react-router": "^1.0.1",
-    "superagent": "^3.8.3"
+    "jest": "^24.3.1",
+    "mocha": "^6.0.2",
+    "nodemon": "^1.18.10",
+    "prettier": "^1.16.4",
+    "react-test-renderer": "^16.8.4",
+    "rimraf": "^2.6.3",
+    "storybook-react-router": "^1.0.2",
+    "superagent": "^4.1.0"
   },
-  "browserslist": [
-    "last 2 versions"
-  ],
+  "targets":{
+    "browsers": ["last 2 versions", "safari >= 7"],
+	  "node": "6.10"
+  },
   "jest": {
     "setupFiles": [
       "<rootDir>/enzymeconfig.js"
