--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,11 @@
 {
-    "presets": ["env", "react"],
+    "presets": [
+      "@babel/preset-env","@babel/preset-react",
+    ],
     "plugins": [
-      "transform-object-rest-spread",
-      "transform-class-properties",
-      "syntax-dynamic-import",
-      "transform-react-constant-elements"
+      /* ["@babel/plugin-proposal-object-rest-spread", { "loose": true, "useBuiltIns": true }], */
+      "@babel/plugin-proposal-class-properties",
+      "@babel/plugin-syntax-dynamic-import",
+      "@babel/plugin-transform-react-constant-elements"
     ]
   }
