--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "url": "https://github.com/jonniebigodes/fcc-isqa/issues"
   },
   "engines": {
-    "node": "8.11.3"
+    "node": "10.13.0",
+    "npm":"6.4.1"
   },
   "homepage": "https://github.com/jonniebigodes/fcc-isqa#readme",
   "dependencies": {
